# wf-touch

./: README.md  meson.build
src/: actions.cpp  math.cpp  math.hpp  touch.cpp
test/: action_test.cpp  basic_test.cpp  doctest.h  gesture_test.cpp  meson.build  shared.hpp
wayfire/touch/: touch.hpp
