basic_test = executable(
    'basic_test',
    'basic_test.cpp',
    dependencies: wftouch,
    install: false)
test('Basic test', basic_test)

action_test = executable(
    'action_test',
    'action_test.cpp',
    dependencies: wftouch,
    install: false)
test('Action test', action_test)

gesture_test = executable(
    'gesture_test',
    'gesture_test.cpp',
    dependencies: wftouch,
    install: false)
test('Gesture test', gesture_test)
